--- a/meta-plos/conf/distro/plos.conf
+++ b/meta-plos/conf/distro/plos.conf
@@ -3,7 +3,7 @@ require conf/distro/poky.conf
 DISTRO = "plos"
 DISTRO_NAME = "PLOS Distribution, derived from poky"
 
-DISTRO_FEATURES = "systemd x11 alsa ext2 xattr wifi 3g opengl ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES = "systemd wayland xattr wifi opengl ${DISTRO_FEATURES_LIBC}"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
