Switch from u-boot-fslc to u-boot-riotboard.
u-boot-riotboard recipe is taken from the embest repository.
Because changes in freescale mainline are not complete yet for riotboard.

--- a/meta-plos-bsp/conf/machine/rigoletto.conf
+++ b/meta-plos-bsp/conf/machine/rigoletto.conf
@@ -6,11 +6,18 @@
 #@MAINTAINER: Volker Kempert <volker.kempert@pixmeter.com>
 
 # derived from riotboard
-include conf/machine/riotboard.conf
-SOC_FAMILY_append = ":riotboard"
+include conf/machine/imx6dl-riotboard.conf
+
+# SOC_FAMILY_append = ":imx6dl-riotboard"
+# IMAGE FSTYPES = "sdcard"
+
+# overwrite u-boot
+PREFERRED_PROVIDER_u-boot = "u-boot-riotboard"
+
+UBOOT_MACHINE = "mx6solo_RIoTboard_config"
+
+KERNEL_IMAGETYPE = "uImage"
 
 # Add gstreamer plugins provided by Freescale
-MACHINE_EXTRA_RRECOMMENDS += "gst-fsl-plugin"
-
-PREFERRED_PROVIDER_virtual/libx11 = "libx11"
+# MACHINE_EXTRA_RRECOMMENDS += "gst-fsl-plugin"
 
