Change rigoletto machine definition

--- a/meta-plos-bsp/conf/machine/rigoletto.conf
+++ b/meta-plos-bsp/conf/machine/rigoletto.conf
@@ -8,8 +8,8 @@
 # derived from riotboard
 include conf/machine/imx6dl-riotboard.conf
 
-# SOC_FAMILY_append = ":imx6dl-riotboard"
-# IMAGE FSTYPES = "sdcard"
+SOC_FAMILY_append = ":imx6dl-riotboard"
+IMAGE_FSTYPES = "sdcard"
 
 # overwrite u-boot
 PREFERRED_PROVIDER_u-boot = "u-boot-riotboard"
