Rename plos distro to ams

--- a/meta-plos/conf/distro/ams.conf
+++ b/meta-plos/conf/distro/ams.conf
@@ -1,7 +1,7 @@
-require conf/distro/poky.conf
+require conf/distro/defaultsetup.conf
 
-DISTRO = "plos"
-DISTRO_NAME = "PLOS Distribution, derived from poky"
+DISTRO = "ams"
+DISTRO_NAME = "AMS Distribution, derived from poky"
 
 DISTRO_FEATURES = "systemd wayland xattr usbgadget ext2 largefile wifi opengl ${DISTRO_FEATURES_LIBC}"
 
@@ -9,4 +9,4 @@ VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
 PACKAGE_CLASSES = "package_ipk"
-PACKAGE_FEED_URIS = "http://worker.pixmeter.com/packages"
+PACKAGE_FEED_URIS = "http://yocto.almedso.de/packages"
