--- a/meta-plos/conf/layer.conf
+++ b/meta-plos/conf/layer.conf
@@ -5,15 +5,14 @@ BBPATH =. "${LAYERDIR}:"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "plos"
-BBFILE_PATTERN_plos = "^${LAYERDIR}/"
-BBFILE_PRIORITY_plos = "6"
+BBFILE_COLLECTIONS += "ams"
+BBFILE_PATTERN_ams = "^${LAYERDIR}/"
+BBFILE_PRIORITY_ams = "6"
 
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
-LAYERVERSION_plos = "1"
+LAYERVERSION_ams = "1"
 
-LAYERDEPENDS_plos = "yocto"
 
 # Set a variable to get to the top of the metadata location
 PLOSCOREBASE = '${@os.path.normpath("${LAYERDIR}/../")}'
