Update layer spec for meta-ams-bsp layer

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -5,9 +5,9 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "plosbsp"
-BBFILE_PATTERN_plosbsp = "^${LAYERDIR}/"
-BBFILE_PRIORITY_plosbsp = "6"
-LAYERVERSION_plosbsp = "1"
+BBFILE_COLLECTIONS += "amsbsp"
+BBFILE_PATTERN_amsbsp = "^${LAYERDIR}/"
+BBFILE_PRIORITY_amsbsp = "6"
+LAYERVERSION_amsbsp = "1"
 
-LAYERDEPENDS_plosbsp = "plos fsl-arm-extra"
+LAYERDEPENDS_amsbsp = "ams fsl-arm-extra"
