--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -3,7 +3,7 @@ require conf/distro/defaultsetup.conf
 DISTRO = "ams"
 DISTRO_NAME = "AMS Distribution, derived from poky"
 
-DISTRO_FEATURES = "systemd wayland xattr usbgadget ext2 largefile wifi opengl ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES = "systemd xattr usbgadget ext2 largefile wifi opengl ${DISTRO_FEATURES_LIBC}"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
