Add compat level for meta-ams and meta-ams-bsp layer

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -8,6 +8,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "amsbsp"
 BBFILE_PATTERN_amsbsp = "^${LAYERDIR}/"
 BBFILE_PRIORITY_amsbsp = "6"
-LAYERVERSION_amsbsp = "1"
+LAYERVERSION_amsbsp = "2"
+LAYERSERIES_COMPAT_ams = "sumo thud"
 
 LAYERDEPENDS_amsbsp = "ams fsl-arm-extra"
