--- a/meta-ams/conf/layer.conf
+++ b/meta-ams/conf/layer.conf
@@ -11,7 +11,8 @@ BBFILE_PRIORITY_ams = "6"
 
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
-LAYERVERSION_ams = "1"
+LAYERVERSION_ams = "2"
+LAYERSERIES_COMPAT_ams = "sumo thud"
 
 
 # Set a variable to get to the top of the metadata location
