Update distro, i.e define version, package etc

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -1,7 +1,12 @@
 require conf/distro/defaultsetup.conf
 
 DISTRO = "ams"
-DISTRO_NAME = "AMS Distribution, derived from poky"
+DISTRO_NAME = "AMS Distribution"
+DISTRO_VERSION = "2019.05"
+BUILD_VARIANT = "prod"
+FEEDURIPREFIX ?= "packages/${DISTRO}-${DISTRO_VERSION}/${BUILD_VARIANT}"
+
+OPKG_ARGS_remove = "--prefer-arch-to-version"
 
 DISTRO_FEATURES = "systemd xattr usbgadget ext2 largefile wifi opengl ${DISTRO_FEATURES_LIBC}"
 
@@ -10,3 +15,10 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
 PACKAGE_CLASSES = "package_ipk"
 PACKAGE_FEED_URIS = "http://yocto.almedso.de/packages"
+
+ENTERPRISE_DISTRO = "1"
+
+SANITY_TESTED_DISTROS ?= " \
+  ubuntu-16.04 \n \
+  ubuntu-18.04 \n \
+  "
