--- a/meta-ams/conf/local.conf.sample
+++ b/meta-ams/conf/local.conf.sample
@@ -19,6 +19,8 @@ BB_DISKMON_DIRS ??= "\
 # qemu specifics
 PACKAGECONFIG_append_pn-qemu-native = " sdl"
 PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
+MACHINE ?= 'qemuarm'
+
 
 CONF_VERSION = "1"
 
@@ -26,7 +28,10 @@ BB_NUMBER_THREADS = '4'
 PARALLEL_MAKE = '-j 4'
 
 # overwrite in site.conf
-DL_DIR ?= "${BSPDIR}/downloads/"
+DL_DIR ?= "${TOPDIR}/downloads/"
+
+# Fix the temp dir such that later rsync can refer to output
+TMPDIR = "${TOPDIR}/tmp"
 
 # raspberry predefinitions
 MACHINE ?= 'raspberrypi0-wifi'
@@ -35,3 +40,6 @@ MACHINE ?= 'raspberrypi3'
 # freescale/nxp predefinitions
 MACHINE ?= 'imx6dl-riotboard'
 ACCEPT_FSL_EULA = "1"
+
+GLIBC_GENERATE_LOCALES ?= "en_US.UTF-8 de_DE.UTF-8"
+IMAGE_LINGUAS ?= "en-us de-de"
