Fix compat level in meta-ams-bsp

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -9,6 +9,6 @@ BBFILE_COLLECTIONS += "amsbsp"
 BBFILE_PATTERN_amsbsp = "^${LAYERDIR}/"
 BBFILE_PRIORITY_amsbsp = "6"
 LAYERVERSION_amsbsp = "2"
-LAYERSERIES_COMPAT_ams = "sumo thud"
+LAYERSERIES_COMPAT_amsbsp = "sumo thud"
 
 LAYERDEPENDS_amsbsp = "ams fsl-arm-extra"
