Update ams distro configuration.
- Remove default include (since it is done by bitbake anyway)
- Set bluez5 as default provider for bluez package

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -1,4 +1,6 @@
-require conf/distro/defaultsetup.conf
+
+# set prefered versions and vendors.
+PREFERRED_PROVIDER_virtual/bluez = "bluez5"
 
 DISTRO = "ams"
 DISTRO_NAME = "AMS Distribution"
@@ -21,4 +23,5 @@ ENTERPRISE_DISTRO = "1"
 SANITY_TESTED_DISTROS ?= " \
   ubuntu-16.04 \n \
   ubuntu-18.04 \n \
+  ubuntu-18.10 \n \
   "
