chore: Update machines: rodolfo=raspberrypi0-wifi ricardo=raspberrypi3

--- a/meta-ams-bsp/conf/machine/ricardo.conf
+++ b/meta-ams-bsp/conf/machine/ricardo.conf
@@ -1,12 +1,12 @@
 #@TYPE: Machine
 #@NAME: Board Configuration "rodolfo"
 #@COM: raspberrypi
-#@DESCRIPTION: Board Configuration "rodolfo" (based on raspberrypi0-wifi, w console)
+#@DESCRIPTION: Board Configuration "rodolfo" (based on raspberrypi3, w/ console)
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
 
 
-MACHINEOVERRIDES = "raspberrypi0-wifi:${MACHINE}"
-require conf/machine/raspberrypi0-wifi.conf
+MACHINEOVERRIDES = "raspberrypi3:${MACHINE}"
+require conf/machine/raspberrypi3.conf
 
 MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa bluetooth sdio"
 
