--- a/meta-ams-bsp/conf/machine/rigoletto.conf
+++ b/meta-ams-bsp/conf/machine/rigoletto.conf
@@ -21,3 +21,6 @@ KERNEL_IMAGETYPE = "uImage"
 # Add gstreamer plugins provided by Freescale
 # MACHINE_EXTRA_RRECOMMENDS += "gst-fsl-plugin"
 
+IMAGE_FSTYPES += "tar.gz wic"
+WKS_FILE ?= "sdimage-bootpart.wks"
+
