--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -4,24 +4,24 @@ PREFERRED_PROVIDER_virtual/bluez = "bluez5"
 
 DISTRO = "ams"
 DISTRO_NAME = "AMS Distribution"
-DISTRO_VERSION = "2019.05"
+DISTRO_VERSION = "2019.07"
 BUILD_VARIANT = "prod"
-FEEDURIPREFIX ?= "packages/${DISTRO}-${DISTRO_VERSION}/${BUILD_VARIANT}"
+
 
 OPKG_ARGS_remove = "--prefer-arch-to-version"
 
-DISTRO_FEATURES = "systemd xattr usbgadget ext2 largefile wifi opengl ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES = "systemd xattr usbgadget ext2 largefile wifi opengl pam ${DISTRO_FEATURES_LIBC}"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
-PACKAGE_CLASSES = "package_ipk"
-PACKAGE_FEED_URIS = "http://yocto.almedso.de/packages"
+PACKAGE_CLASSES ?= "package_ipk"
+PACKAGE_FEED_URIS ?= "http://ams.almedso.de/feeds"
 
 ENTERPRISE_DISTRO = "1"
 
 SANITY_TESTED_DISTROS ?= " \
   ubuntu-16.04 \n \
   ubuntu-18.04 \n \
-  ubuntu-18.10 \n \
+  ubuntu-19.04 \n \
   "
