Overwrite machine imx6dl_riotboard in rigoletto (wks definition)

--- a/meta-ams-bsp/conf/machine/rigoletto.conf
+++ b/meta-ams-bsp/conf/machine/rigoletto.conf
@@ -3,24 +3,23 @@
 #@SOC: i.MX6 Solo
 #@COM: riotboard
 #@DESCRIPTION: Machine configuration for Board Configuration "Rigoletto" (based on riotboard)
-#@MAINTAINER: Volker Kempert <volker.kempert@pixmeter.com>
 
 # derived from riotboard
 include conf/machine/imx6dl-riotboard.conf
 
 SOC_FAMILY_append = ":imx6dl-riotboard"
-IMAGE_FSTYPES = "sdcard"
-
-# overwrite u-boot
-PREFERRED_PROVIDER_u-boot = "u-boot-riotboard"
-
-UBOOT_MACHINE = "mx6solo_RIoTboard_config"
-
-KERNEL_IMAGETYPE = "uImage"
 
 # Add gstreamer plugins provided by Freescale
 # MACHINE_EXTRA_RRECOMMENDS += "gst-fsl-plugin"
 
 IMAGE_FSTYPES += "tar.gz wic"
-WKS_FILE ?= "sdimage-bootpart.wks"
 
+# control which files go into the boot partion via wic
+# IMAGE_BOOT_FILES = "u-boot.img uImage"
+
+
+# kernel additional command line args
+
+# sdcard image definition
+# a boot partition is needed ( - overwrite imx-uboot.wks)
+WKS_FILES = "imx-uboot-bootpart.wks"
