doc: Fix copy paste typo in machine spec

--- a/meta-ams-bsp/conf/machine/ricardo.conf
+++ b/meta-ams-bsp/conf/machine/ricardo.conf
@@ -1,7 +1,7 @@
 #@TYPE: Machine
-#@NAME: Board Configuration "rodolfo"
+#@NAME: Board Configuration "ricardo"
 #@COM: raspberrypi
-#@DESCRIPTION: Board Configuration "rodolfo" (based on raspberrypi3, w/ console)
+#@DESCRIPTION: Board Configuration "ricardo" (based on raspberrypi3, w/ console)
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
 
 
