Update ruiz machine

--- a/meta-ams-bsp/conf/machine/ruiz.conf
+++ b/meta-ams-bsp/conf/machine/ruiz.conf
@@ -8,17 +8,36 @@
 MACHINEOVERRIDES = "raspberrypi3:${MACHINE}"
 require conf/machine/raspberrypi3.conf
 
-MACHINE_FEATURES_remove = "sdio"
+# MACHINE_FEATURES_remove = "sdio"
+# Driver to support weston / graphics
+MACHINE_FEATURES += "vc4graphics"
 
-# Disable the console (as serial0 in kernel cmdline.txt) and in config.txt
-ENABLE_UART = "0"
+# Remove black border
+DISABLE_OVERSCAN = "1"
+
+# Heavily recommended for Wayland/Weston.
+DISPMANX_OFFLINE = "1"
+
+GPU_MEM = "128"
+
+# Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
+# !! modifies timing for RPI3 !! is of by default for RPI3
+ENABLE_UART = "1"
 
 # Change some providers to make things work.
-PREFERRED_PROVIDER_virtual/libgl = "mesa"
-PREFERRED_PROVIDER_virtual/libgles2 = "mesa"
-PREFERRED_PROVIDER_virtual/libgbm = "mesa"
-PREFERRED_PROVIDER_virtual/egl = "mesa"
-PREFERRED_PROVIDER_virtual/mesa = "mesa"
+#PREFERRED_PROVIDER_virtual/libgl = "mesa"
+#PREFERRED_PROVIDER_virtual/libgles2 = "mesa"
+#PREFERRED_PROVIDER_virtual/libgbm = "mesa"
+#PREFERRED_PROVIDER_virtual/egl = "mesa"
+#PREFERRED_PROVIDER_virtual/mesa = "mesa"
 
 IMAGE_FSTYPES += "wic"
-SPLASH = "psplash-raspberrypi"
+
+DISABLE_SPLASH = "1"
+# SPLASH = "psplash-raspberrypi"
+
+# Required for the touch screen
+ENABLE_SPI_BUS = "1"
+
+# Touch screen setting
+WAVESHARE_800X480_RPI = "1"
