Let ams distro be based on poky

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -1,10 +1,11 @@
 
-# set prefered versions and vendors.
-PREFERRED_PROVIDER_virtual/bluez = "bluez5"
+require conf/distro/poky.conf
+
+DISTROOVERRIDES = "poky"
 
 DISTRO = "ams"
 DISTRO_NAME = "AMS Distribution"
-DISTRO_VERSION = "2019.07"
+DISTRO_VERSION = "2019.09"
 BUILD_VARIANT = "prod"
 
 
@@ -20,7 +21,7 @@ PACKAGE_FEED_URIS ?= "http://ams.almedso.de/feeds"
 
 ENTERPRISE_DISTRO = "1"
 
-SANITY_TESTED_DISTROS ?= " \
+SANITY_TESTED_DISTROS = " \
   ubuntu-16.04 \n \
   ubuntu-18.04 \n \
   ubuntu-19.04 \n \
