Update ruiz configuration towards touch display
Also inject edid file for waveshare monitor.

The waveshare adapter does not provide monitor information.
Thus, some default need to be injected.

--- a/meta-ams-bsp/conf/machine/ruiz.conf
+++ b/meta-ams-bsp/conf/machine/ruiz.conf
@@ -24,18 +24,10 @@ GPU_MEM = "128"
 # !! modifies timing for RPI3 !! is of by default for RPI3
 ENABLE_UART = "1"
 
-# Change some providers to make things work.
-#PREFERRED_PROVIDER_virtual/libgl = "mesa"
-#PREFERRED_PROVIDER_virtual/libgles2 = "mesa"
-#PREFERRED_PROVIDER_virtual/libgbm = "mesa"
-#PREFERRED_PROVIDER_virtual/egl = "mesa"
-#PREFERRED_PROVIDER_virtual/mesa = "mesa"
-
 IMAGE_FSTYPES += "wic"
 
-DISABLE_SPLASH = "1"
-# SPLASH = "psplash-raspberrypi"
-
+SPLASH = "psplash-ams"
 
 # Touch screen setting
 WAVESHARE_800X480_RPI = "1"
+MACHINE_FEATURES += "ads7846-touch"
