Add meta-qt5 layer to bblayers.conf

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -25,6 +25,8 @@ BBLAYERS = " \
   \
   ${BSPDIR}/sources/meta-nodejs \
   \
+  ${BSPDIR}/sources/meta-qt5 \
+  \
   ${BSPDIR}/sources/ams/meta-ams \
   ${BSPDIR}/sources/ams/meta-ams-bsp \
 "
