Remove special wks file for rigoletto machine

--- a/meta-ams-bsp/conf/machine/rigoletto.conf
+++ b/meta-ams-bsp/conf/machine/rigoletto.conf
@@ -22,4 +22,6 @@ IMAGE_FSTYPES += "tar.gz wic"
 
 # sdcard image definition
 # a boot partition is needed ( - overwrite imx-uboot.wks)
-WKS_FILES = "imx-uboot-bootpart.wks"
+#
+# imx-uboot-bootpart.wks is not available at warrior anymore
+# WKS_FILES = "imx-uboot-bootpart.wks"
