--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -12,6 +12,7 @@ BUILD_VARIANT = "prod"
 OPKG_ARGS_remove = "--prefer-arch-to-version"
 
 DISTRO_FEATURES = "wayland systemd xattr usbgadget ext2 largefile wifi opengl pam ${DISTRO_FEATURES_LIBC}"
+# DISTRO_FEATURES_append = " virtualization"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
