--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -11,7 +11,21 @@ BUILD_VARIANT = "prod"
 
 OPKG_ARGS_remove = "--prefer-arch-to-version"
 
-DISTRO_FEATURES = "wayland systemd xattr usbgadget ext2 largefile wifi opengl pam ${DISTRO_FEATURES_LIBC}"
+DISTRO_FEATURES = "\
+  ${DISTRO_FEATURES_LIBC} \
+  bluez5 \
+  bluetooth \
+  ext2 \
+  ipv4 ipv6 \
+  largefile \
+  opengl \
+  pam \
+  usbgadget \
+  systemd \
+  wayland  \
+  wifi \
+  xattr \
+"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
