Add qt5-graphics application to ams-image-gui-dev
the browser defaults to brows http://localhost only.
This is provided by also installing nginx

--- a/meta-ams/recipes-graphics/wayland/weston/weston.ini
+++ b/meta-ams/recipes-graphics/wayland/weston/weston.ini
@@ -8,6 +8,9 @@ rotation=90
 
 [output]
 name=HDMI-A-1
-mode=800x480@60
+mode=800x480@60 16:9
 transform=90
 
+[launcher]
+path=/usr/bin/qt5-browser --no-sandbox --platform wayland
+icon=/usr/share/icons/hicolor/24x24/apps/gtk3-demo.png
