Remove custom license ref in layer.conf

--- a/meta-ams/conf/layer.conf
+++ b/meta-ams/conf/layer.conf
@@ -21,4 +21,4 @@ PLOSCOREBASE = '${@os.path.normpath("${LAYERDIR}/../")}'
 # Additional custom license directories.
 # Add your custom licenses directories this path.
 # Add your custom license files into one of this directories.
-LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
+# LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
