Add qt5-browser to better work with wayland

--- a/meta-ams/recipes-graphics/wayland/weston/weston.ini
+++ b/meta-ams/recipes-graphics/wayland/weston/weston.ini
@@ -1,6 +1,22 @@
 [core]
 require-input=true
 backend=drm-backend.so
+#shell=desktop-shell.so
+#shell=ivi-shell.so
+
+#[shell]
+#background-image=/usr/share/backgrounds/gnome/Aqua.jpg
+#background-color=0xff002244
+#background-type=tile
+#clock-format=minutes
+#panel-color=0x90ff0000
+#locking=true
+#animation=zoom
+#startup-animation=fade
+#binding-modifier=ctrl
+#num-workspaces=6
+#cursor-theme=whiteglass
+#cursor-size=24
 
 [libinput]
 enable_tap=true
@@ -12,5 +28,24 @@ mode=800x480
 transform=90
 
 [launcher]
-path=/usr/bin/qt5-browser --no-sandbox --platform wayland
+path=/usr/bin/qt5-browser --no-sandbox --platform wayland -h 800 -w 480 http://localhost/login
 icon=/usr/share/icons/hicolor/24x24/apps/gtk3-demo.png
+
+[launcher]
+path=/usr/bin/weston-terminal
+icon=/usr/share/icons/hicolor/24x24/apps/gtk3-widget-factory.png
+
+[launcher]
+path=/usr/bin/qt5-simple --platform wayland
+icon=/usr/share/icons/hicolor/24x24/apps/wireshark.png
+
+[libinput]
+enable_tap=true
+
+[touchpad]
+constant_accel_factor = 50
+min_accel_factor = 0.16
+max_accel_factor = 1.0
+
+#[input-method]
+#path=/usr/lib/weston/weston-keyboard
