--- a/meta-ams/recipes-application/qt5-browser/files/qt5-browser.service
+++ b/meta-ams/recipes-application/qt5-browser/files/qt5-browser.service
@@ -4,6 +4,8 @@ After=weston.service
 
 [Service]
 Environment=XDG_RUNTIME_DIR=/run/user/0
+Environment=QT_QPA_PLATFORM=wayland
+Environment=QTWEBENGINE_DISABLE_SANDBOX=1
 ExecStart=/usr/bin/qt5-browser --platform wayland --no-sandbox -l 480 -w 800
 
 [Install]
