Get indpendent from poky distro
Update distro qt5 config and image includes

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -1,13 +1,13 @@
 
-require conf/distro/poky.conf
-
-DISTROOVERRIDES = "poky"
+require conf/distro/include/poky-copy.inc
 
 DISTRO = "ams"
 DISTRO_NAME = "AMS Distribution"
-DISTRO_VERSION = "2019.09"
-BUILD_VARIANT = "prod"
+DISTRO_VERSION = "2020-Q1-3.0.2"
+DISTRO_CODENAME = "zeus"
 
+BUILD_VARIANT = "prod"
+TARGET_VENDOR = "-ams"
 
 OPKG_ARGS_remove = "--prefer-arch-to-version"
 
@@ -18,12 +18,15 @@ DISTRO_FEATURES = "\
   ext2 \
   ipv4 ipv6 \
   largefile \
+  multiarch \
   opengl \
   pam \
+  ptest \
   usbgadget \
   systemd \
   wayland  \
   wifi \
+  vulcan \
   xattr \
 "
 
