--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -30,6 +30,11 @@ MACHINE ?= 'raspberrypi0-wifi'
 MACHINE ?= 'raspberrypi3'
 MACHINE ?= 'imx6dl-riotboard'
 MACHINE ?= 'rigoletto'
+MACHINE ?= 'ricardo'
+MACHINE ?= 'ruiz'
+MACHINE ?= 'rodolfo'
+MACHINE ?= 'quirin'
+
 
 # freescale/nxp predefinitions
 ACCEPT_FSL_EULA = "1"
