Enable peripherals for ricardo

--- a/meta-ams-bsp/conf/machine/ricardo.conf
+++ b/meta-ams-bsp/conf/machine/ricardo.conf
@@ -15,3 +15,8 @@ ENABLE_UART = "1"
 
 IMAGE_FSTYPES += "wic"
 SPLASH = ""
+
+ENABLE_SPI_BUS = "1"
+ENABLE_I2C = "1"
+
+KERNEL_MODULE_AUTOLOAD_rpi += "i2c-dev i2c-bcm2708"
