Change sanity host distros

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -11,6 +11,8 @@ TARGET_VENDOR = "-ams"
 
 OPKG_ARGS_remove = "--prefer-arch-to-version"
 
+DISTRO_FEATURES_LIBC += "libc-locales"
+
 DISTRO_FEATURES = "\
   ${DISTRO_FEATURES_LIBC} \
   bluez5 \
@@ -39,7 +41,6 @@ PACKAGE_FEED_URIS ?= "http://ams.almedso.de/feeds"
 ENTERPRISE_DISTRO = "1"
 
 SANITY_TESTED_DISTROS = " \
-  ubuntu-16.04 \n \
   ubuntu-18.04 \n \
-  ubuntu-19.04 \n \
+  ubuntu-20.04 \n \
   "
