Add openembedded-core/meta layer

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -11,4 +11,4 @@ BBFILE_PRIORITY_amsbsp = "6"
 LAYERVERSION_amsbsp = "2"
 LAYERSERIES_COMPAT_amsbsp = "sumo thud warrior zeus dunfell master"
 
-LAYERDEPENDS_amsbsp = "ams"
+LAYERDEPENDS_amsbsp = "ams raspberrypi"
