--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -6,17 +6,19 @@ BSPDIR := "${@os.path.abspath(os.path.dirname(d.getVar('FILE', True)) + '/../..'
 
 BBFILES ?= ""
 BBLAYERS = " \
-  ${BSPDIR}/sources/poky/meta \
+   \
   ${BSPDIR}/sources/poky/meta-poky \
   ${BSPDIR}/sources/poky/meta-yocto-bsp \
   \
   ${BSPDIR}/sources/openembedded-core/meta \
   ${BSPDIR}/sources/meta-openembedded/meta-oe \
   ${BSPDIR}/sources/meta-openembedded/meta-python \
+  ${BSPDIR}/sources/meta-openembedded/meta-filesystems \
   ${BSPDIR}/sources/meta-openembedded/meta-networking \
-  ${BSPDIR}/sources/meta-openembedded/meta-gnome \
-  ${BSPDIR}/sources/meta-openembedded/meta-webserver \
   ${BSPDIR}/sources/meta-openembedded/meta-multimedia \
+  ${BSPDIR}/sources/meta-openembedded/meta-webserver \
+  \
+  ${BSPDIR}/sources/meta-virtualization \
   \
   ${BSPDIR}/sources/meta-freescale \
   ${BSPDIR}/sources/meta-freescale-3rdparty \
@@ -30,3 +32,6 @@ BBLAYERS = " \
   ${BSPDIR}/sources/ams/meta-ams \
   ${BSPDIR}/sources/ams/meta-ams-bsp \
 "
+
+# core layer same as openembedded-core/meta
+excluded = " ${BSPDIR}/sources/poky/meta "
