--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -31,6 +31,7 @@ DISTRO_FEATURES = "\
   vulcan \
   xattr \
 "
+DISTRO_FEATURES_append = " virtualization"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
