Add imaging to  ams-image-dev
+ Add wic.bmap to image types
+ Enable i2c-0 on rpi
+ update packagegroup-explore700

--- a/meta-ams-bsp/conf/machine/rigoletto.conf
+++ b/meta-ams-bsp/conf/machine/rigoletto.conf
@@ -12,7 +12,7 @@ SOC_FAMILY_append = ":imx6dl-riotboard"
 # Add gstreamer plugins provided by Freescale
 # MACHINE_EXTRA_RRECOMMENDS += "gst-fsl-plugin"
 
-IMAGE_FSTYPES += "tar.gz wic"
+IMAGE_FSTYPES += "tar.gz wic wic.bmap"
 
 # control which files go into the boot partion via wic
 # IMAGE_BOOT_FILES = "u-boot.img uImage"
