--- a/meta-ams-bsp/conf/machine/roderigo.conf
+++ b/meta-ams-bsp/conf/machine/roderigo.conf
@@ -13,5 +13,5 @@ MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa bluetooth sdio"
 # Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
 ENABLE_UART = "1"
 
-IMAGE_FSTYPES += "wic"
+IMAGE_FSTYPES += "wic wic.bmap"
 SPLASH_DISABLE = "1"
