--- a/meta-ams-bsp/conf/machine/ricardo.conf
+++ b/meta-ams-bsp/conf/machine/ricardo.conf
@@ -13,7 +13,7 @@ MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa bluetooth sdio"
 # Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
 ENABLE_UART = "1"
 
-IMAGE_FSTYPES += "wic"
+IMAGE_FSTYPES += "wic wic.bmap"
 SPLASH = ""
 
 ENABLE_SPI_BUS = "1"
