Update collected changes from to save T450
This commit is a collection of changes done at T450 before
giving the computer away.

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -3,8 +3,7 @@ require conf/distro/include/poky-copy.inc
 
 DISTRO = "ams"
 DISTRO_NAME = "AMS Distribution"
-DISTRO_VERSION = "2020-Q1-3.0.2"
-DISTRO_CODENAME = "zeus"
+DISTRO_VERSION = "2020-Q3"
 
 BUILD_VARIANT = "prod"
 TARGET_VENDOR = "-ams"
