--- a/meta-ams-bsp/conf/machine/ricardo.conf
+++ b/meta-ams-bsp/conf/machine/ricardo.conf
@@ -13,7 +13,11 @@ MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa bluetooth sdio"
 # Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
 ENABLE_UART = "1"
 
-IMAGE_FSTYPES += "wic wic.bmap"
+IMAGE_FSTYPES += "wic"
+# WKS_FILE = "sdimage-bootpart.wks"
+# extra rootfs size in kbyte e.g. 4 GB here
+IMAGE_ROOTFS_EXTRA_SPACE = "4194304"
+
 SPLASH = ""
 
 ENABLE_SPI_BUS = "1"
