Add jupyter notebook support and v4l2 support
- ams-image-dev contains a jupyter notebook as service
- jupyter service is established at recipes-application/jupyter
- ricardo (rasp*pi3) is now with v4l2 cam driver support and can support

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -27,7 +27,8 @@ BBLAYERS = " \
   ${BSPDIR}/sources/meta-raspberrypi \
   \
   ${BSPDIR}/sources/meta-rust-bin \
-  ${BSPDIR}/sources/meta-qt5 \
+  ${BSPDIR}/sources/meta-qt6 \
+  ${BSPDIR}/sources/meta-jupyter \
   \
   ${BSPDIR}/sources/ams/meta-ams \
   ${BSPDIR}/sources/ams/meta-ams-bsp \
