--- a/meta-ams-bsp/conf/machine/ricardo.conf
+++ b/meta-ams-bsp/conf/machine/ricardo.conf
@@ -4,6 +4,7 @@
 #@DESCRIPTION: Board Configuration "ricardo" (based on raspberrypi3, w/ console)
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
 
+# see  https://readthedocs.org/projects/meta-raspberrypi/
 
 MACHINEOVERRIDES = "raspberrypi3:${MACHINE}"
 require conf/machine/raspberrypi3.conf
@@ -24,3 +25,12 @@ ENABLE_SPI_BUS = "1"
 ENABLE_I2C = "1"
 
 KERNEL_MODULE_AUTOLOAD_rpi += "i2c-dev i2c-bcm2708"
+
+# can bus support
+ENABLE_SPI_BUS = "1"
+ENABLE_CAN = "1"
+CAN_OSCILLATOR = "8000000"
+
+# video for linix driver support
+VIDEO_CAMERA = "1"
+RASPBERRYPI_CAMERA_V2 = "1"
