Update raspi machines to support CAN

--- a/meta-ams-bsp/conf/machine/rodolfo.conf
+++ b/meta-ams-bsp/conf/machine/rodolfo.conf
@@ -15,3 +15,16 @@ ENABLE_UART = "1"
 
 IMAGE_FSTYPES += "wic wic.bmap"
 SPLASH = ""
+
+# can bus support
+ENABLE_SPI_BUS = "1"
+ENABLE_CAN = "1"
+CAN_OSCILLATOR = "8000000"
+
+ENABLE_SPI_BUS = "1"
+ENABLE_I2C = "1"
+
+IMAGE_FSTYPES += "wic"
+# WKS_FILE = "sdimage-bootpart.wks"
+# extra rootfs size in kbyte e.g. 4 GB here
+IMAGE_ROOTFS_EXTRA_SPACE = "4194304"
