--- a/meta-ams-bsp/conf/machine/ricardo.conf
+++ b/meta-ams-bsp/conf/machine/ricardo.conf
@@ -9,7 +9,7 @@
 MACHINEOVERRIDES = "raspberrypi3:${MACHINE}"
 require conf/machine/raspberrypi3.conf
 
-MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa bluetooth sdio"
+MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa sdio"
 
 # Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
 ENABLE_UART = "1"
