Add imaging and juypter and scipy

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -44,3 +44,66 @@ SANITY_TESTED_DISTROS = " \
   ubuntu-18.04 \n \
   ubuntu-20.04 \n \
   "
+
+# Some ptests (glibc, bash, python3) depend
+# on other locales to be included
+GLIBC_GENERATE_LOCALES = " \
+    en_US.UTF-8 \
+    en_GB.UTF-8 \
+    pt_PT.UTF-8 \
+    pt_BR.UTF-8 \
+    fi_FI.UTF-8 \
+    it_IT.UTF-8 \
+    nl_NL.UTF-8 \
+    nb_NO.UTF-8 \
+    nn_NO.UTF-8 \
+    sv_SE.UTF-8 \
+    el_GR.UTF-8 \
+    es_ES.UTF-8 \
+    fa_IR.UTF-8 \
+    fr_FR.ISO-8859-1 \
+    fr_FR.UTF-8 \
+    hr_HR.UTF-8 \
+    lt_LT.UTF-8 \
+    pl_PL.UTF-8 \
+    ru_RU.UTF-8 \
+    tr_TR.ISO-8859-9 \
+    de_DE.UTF-8 \
+    ja_JP.EUC-JP \
+    zh_HK.BIG5-HKSCS \
+    tr_TR.UTF-8 \
+    pl_PL.ISO-8859-2 \
+"
+IMAGE_LINGUAS = " \
+    en-us \
+    en-gb \
+    pt-pt \
+    pt-br \
+    fi-fi \
+    it-it \
+    nl-nl \
+    nb-no \
+    nn-no \
+    sv-se \
+    el-gr \
+    es-es \
+    fa-ir \
+    fr-fr \
+    hr-hr \
+    lt-lt \
+    pl-pl \
+    ru-ru \
+    tr-tr \
+    de-de \
+    ja-jp.euc-jp \
+    zh-hk.big5-hkscs \
+    tr-tr \
+"
+
+# Uninative is enabled by default when deriving from poky distro
+# It's a prebuild glibc designed to remove the differences between
+# host distros, meaning that native sstate objects can be shared
+# between host distros.
+
+# Do not do this if you are using package feeds.
+ERROR_QA_remove = "version-going-backwards"
