--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -29,6 +29,7 @@ BBLAYERS = " \
   ${BSPDIR}/sources/meta-rust-bin \
   ${BSPDIR}/sources/meta-qt6 \
   ${BSPDIR}/sources/meta-jupyter \
+  ${BSPDIR}/sources/meta-scipy \
   \
   ${BSPDIR}/sources/ams/meta-ams \
   ${BSPDIR}/sources/ams/meta-ams-bsp \
