--- a/meta-ams-bsp/conf/machine/rodolfo.conf
+++ b/meta-ams-bsp/conf/machine/rodolfo.conf
@@ -21,10 +21,9 @@ ENABLE_SPI_BUS = "1"
 ENABLE_CAN = "1"
 CAN_OSCILLATOR = "8000000"
 
-ENABLE_SPI_BUS = "1"
 ENABLE_I2C = "1"
 
 IMAGE_FSTYPES += "wic"
 # WKS_FILE = "sdimage-bootpart.wks"
-# extra rootfs size in kbyte e.g. 4 GB here
-IMAGE_ROOTFS_EXTRA_SPACE = "4194304"
+# extra rootfs size in kbyte e.g. 4GB = 4194304; 1GB = 1048576
+IMAGE_ROOTFS_EXTRA_SPACE = "1048576"
