--- a/meta-ams/recipes-application/power-logger/power-logger/power-logger.service
+++ b/meta-ams/recipes-application/power-logger/power-logger/power-logger.service
@@ -5,7 +5,7 @@ After=network.target
 [Service]
 User=root
 Group=root
-ExecStart=/usr/bin/pcl --host camtic-abcdef --storage /var/www/ams-ref-spa/html
+ExecStart=/usr/bin/pcl --period 60 --storage /var/www/ams-ref-spa/html
 
 [Install]
 WantedBy=multi-user.target
