Add carmen machine and camera-image-dev

--- a/meta-ams-bsp/conf/machine/carmen.conf
+++ b/meta-ams-bsp/conf/machine/carmen.conf
@@ -1,6 +1,7 @@
 #@TYPE: Machine
-#@NAME: Board Configuration "carmen
-#@DESCRIPTION: Board Configuration "carmen" (based on raspberrypi3, w/ high res camera driver)
+#@NAME: Board Configuration "ricardo"
+#@COM: raspberrypi
+#@DESCRIPTION: Board Configuration "ricardo" (based on raspberrypi3, w/ console)
 #@MAINTAINER: Volker Kempert <volker.kempert@almedso.de>
 
 # see  https://readthedocs.org/projects/meta-raspberrypi/
@@ -32,4 +33,4 @@ CAN_OSCILLATOR = "8000000"
 
 # video for linix driver support
 VIDEO_CAMERA = "1"
-RASPBERRYPI_CAMERA_V2 = "1"
+RASPBERRYPI_CAMERA_HQ = "1"
