--- a/meta-ams/conf/templates/default/local.conf.sample
+++ b/meta-ams/conf/templates/default/local.conf.sample
@@ -20,8 +20,8 @@ BB_DISKMON_DIRS ??= "\
     ABORT,/tmp,10M,1K"
 
 # qemu specifics
-PACKAGECONFIG_append_pn-qemu-native = " sdl"
-PACKAGECONFIG_append_pn-nativesdk-qemu = " sdl"
+PACKAGECONFIG:append:pn-qemu-native = " sdl"
+PACKAGECONFIG:append:pn-nativesdk-qemu = " sdl"
 
 # default machines
 MACHINE ?= 'qemuarm'
