Adjust to new append syntax

--- a/meta-ams/conf/distro/ams.conf
+++ b/meta-ams/conf/distro/ams.conf
@@ -8,7 +8,7 @@ DISTRO_VERSION = "2020-Q3"
 BUILD_VARIANT = "prod"
 TARGET_VENDOR = "-ams"
 
-OPKG_ARGS_remove = "--prefer-arch-to-version"
+OPKG_ARGS:remove = "--prefer-arch-to-version"
 
 DISTRO_FEATURES_LIBC += "libc-locales"
 
@@ -30,7 +30,7 @@ DISTRO_FEATURES = "\
   vulcan \
   xattr \
 "
-DISTRO_FEATURES_append = " virtualization"
+DISTRO_FEATURES:append = " virtualization"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
@@ -106,4 +106,4 @@ IMAGE_LINGUAS = " \
 # between host distros.
 
 # Do not do this if you are using package feeds.
-ERROR_QA_remove = "version-going-backwards"
+ERROR_QA:remove = "version-going-backwards"
