--- a/meta-ams/recipes-graphics/wayland/weston/weston.ini
+++ b/meta-ams/recipes-graphics/wayland/weston/weston.ini
@@ -1,10 +1,14 @@
 [core]
-require-input=true
+# require-input=true
 backend=drm-backend.so
+# No idle time means no screenlock or blanking of the display
+idle-time=0
 #shell=desktop-shell.so
 #shell=ivi-shell.so
 
-#[shell]
+[shell]
+# No panel with buttons/clock: we should hide the fact that this is 'just' a Linux distribution
+panel-position=none
 #background-image=/usr/share/backgrounds/gnome/Aqua.jpg
 #background-color=0xff002244
 #background-type=tile
@@ -21,31 +25,30 @@ backend=drm-backend.so
 [libinput]
 enable_tap=true
 rotation=90
+enable_tap=true
 
 [output]
 name=HDMI-A-1
 mode=800x480
 transform=90
 
-[launcher]
-path=/usr/bin/qt5-browser --no-sandbox --platform wayland -h 800 -w 480 http://localhost/login
-icon=/usr/share/icons/hicolor/24x24/apps/gtk3-demo.png
+# [launcher]
+# path=/usr/bin/qt5-browser --no-sandbox --platform wayland -h 800 -w 480 http://localhost/login
+# icon=/usr/share/icons/hicolor/24x24/apps/gtk3-demo.png
 
-[launcher]
-path=/usr/bin/weston-terminal
-icon=/usr/share/icons/hicolor/24x24/apps/gtk3-widget-factory.png
+# [launcher]
+# path=/usr/bin/weston-terminal
+# icon=/usr/share/icons/hicolor/24x24/apps/gtk3-widget-factory.png
 
-[launcher]
-path=/usr/bin/qt5-simple --platform wayland
-icon=/usr/share/icons/hicolor/24x24/apps/wireshark.png
+# [launcher]
+# path=/usr/bin/qt5-simple --platform wayland
+# icon=/usr/share/icons/hicolor/24x24/apps/wireshark.png
 
-[libinput]
-enable_tap=true
 
-[touchpad]
-constant_accel_factor = 50
-min_accel_factor = 0.16
-max_accel_factor = 1.0
+# [touchpad]
+# constant_accel_factor = 50
+# min_accel_factor = 0.16
+# max_accel_factor = 1.0
 
 #[input-method]
 #path=/usr/lib/weston/weston-keyboard
