--- a/meta-ams-bsp-rpi/conf/machine/quirin.conf
+++ b/meta-ams-bsp-rpi/conf/machine/quirin.conf
@@ -13,16 +13,16 @@ KMACHINE_quirin = "qemux86-64"
 CORE_IMAGE_EXTRA_INSTALL += "wayland weston"
 
 
-DISTRO_FEATURES_append = "wayland opengl egl gles gbm dri gallium gallium-llvm virgl"
-MACHINE_FEATURES_append = "virgl virglrenderer-native  wayland virtio-gpu "
-DISTRO_FEATURES_remove = "wifi"
-MACHINE_FEATURES_remove = "wifi"
+DISTRO_FEATURES:append = "wayland opengl egl gles gbm dri gallium gallium-llvm virgl"
+MACHINE_FEATURE:append = "virgl virglrenderer-native  wayland virtio-gpu "
+DISTRO_FEATURES:remove = "wifi"
+MACHINE_FEATURES:remove = "wifi"
 
-PACKAGECONFIG_WAYLAND_append = "xkbcommon-evdev"
+PACKAGECONFIG_WAYLAND:append = "xkbcommon-evdev"
 
-PACKAGECONFIG_append_pn-mesa = "gallium"
-PACKAGECONFIG_append_pn-qtbase = "kms gbm eglfs tools gles2 examples"
+PACKAGECONFIG:append:pn-mesa = "gallium"
+PACKAGECONFIG:append:pn-qtbase = "kms gbm eglfs tools gles2 examples"
 
-GALLIUMDRIVERS_append_pn-mesa = ",virgl"
+GALLIUMDRIVERS:append:pn-mesa = ",virgl"
 
-IMAGE_FSTYPES_append = " wic"
+IMAGE_FSTYPES:append = " wic"
