--- a/meta-ams-bsp-rpi/conf/machine/ricardo.conf
+++ b/meta-ams-bsp-rpi/conf/machine/ricardo.conf
@@ -8,7 +8,7 @@
 MACHINEOVERRIDES = "raspberrypi3:${MACHINE}"
 require conf/machine/raspberrypi3.conf
 
-MACHINE_FEATURES_remove = "keyboard screen touchscreen alsa sdio"
+MACHINE_FEATURES:remove = "keyboard screen touchscreen alsa sdio"
 
 # Enable the console (as serial0 in kernel cmdline.txt) and in config.txt
 ENABLE_UART = "1"
@@ -22,13 +22,15 @@ SPLASH = ""
 
 ENABLE_SPI_BUS = "1"
 ENABLE_I2C = "1"
+RPI_EXTRA_CONFIG = "dtoverlay=pi3-disable-bt"
+RPI_EXTRA_CONFIG += "dtoverlay=spi0-1cs"
 
 KERNEL_MODULE_AUTOLOAD_rpi += "i2c-dev i2c-bcm2708"
 
-# can bus support
-ENABLE_SPI_BUS = "1"
-ENABLE_CAN = "1"
-CAN_OSCILLATOR = "8000000"
+## can bus support
+# ENABLE_SPI_BUS = "1"
+# ENABLE_CAN = "1"
+# CAN_OSCILLATOR = "8000000"
 
 # video for linix driver support
 VIDEO_CAMERA = "1"
