--- a/meta-ams/conf/templates/default/bblayers.conf.sample
+++ b/meta-ams/conf/templates/default/bblayers.conf.sample
@@ -1,5 +1,5 @@
 # LAYER_CONF_VERSION is inclreated each time in /build/conf/bbllayers.conf
-LAYER_CONF_VERSION = "6"
+LAYER_CONF_VERSION = "7"
 
 BBPATH = "${TOPDIR}"
 BSPDIR := "${@os.path.abspath(os.path.dirname(d.getVar('FILE', True)) + '/../..')}"
@@ -20,7 +20,7 @@ BBLAYERS = " \
   \
   ${BSPDIR}/sources/meta-raspberrypi \
   \
-  ${BSPDIR}/sources/meta-rust-bin \
+  ${BSPDIR}/sources/meta-rust \
   ${BSPDIR}/sources/meta-jupyter \
   ${BSPDIR}/sources/meta-scipy \
   \
