Establish meta-ams-bsp as bsp devel layer

--- a/meta-ams-bsp/conf/layer.conf
+++ b/meta-ams-bsp/conf/layer.conf
@@ -7,8 +7,10 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 
 BBFILE_COLLECTIONS += "amsbsp"
 BBFILE_PATTERN_amsbsp = "^${LAYERDIR}/"
-BBFILE_PRIORITY_amsbsp = "6"
-LAYERVERSION_amsbsp = "2"
+# High priority since it provides simple frame to develop BSP's in isolation
+# from applications
+BBFILE_PRIORITY_amsbsp = "50"
+LAYERVERSION_amsbsp = "3"
 LAYERSERIES_COMPAT_amsbsp = "dunfell gatesgarth hardknott"
 
-LAYERDEPENDS_amsbsp = "ams raspberrypi"
+LAYERDEPENDS_amsbsp = " "
