--- a/meta-ams-bsp/conf/distro/ams-bsp.conf
+++ b/meta-ams-bsp/conf/distro/ams-bsp.conf
@@ -1,12 +1,10 @@
 
-require conf/distro/include/poky-copy.inc
-
-DISTRO = "amsbsp"
+DISTRO = "ams-bsp"
 DISTRO_NAME = "AMS BSP Development Distribution"
-DISTRO_VERSION = "2020-Q3"
+DISTRO_VERSION = "2023-Q1"
 
 BUILD_VARIANT = "prod"
-TARGET_VENDOR = "-amsbsp"
+TARGET_VENDOR = "-ams-bsp"
 
 OPKG_ARGS_remove = "--prefer-arch-to-version"
 
@@ -43,7 +41,6 @@ DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 PACKAGE_CLASSES ?= "package_ipk"
 
 SANITY_TESTED_DISTROS = " \
-  ubuntu-18.04 \n \
   ubuntu-20.04 \n \
   "
 
