(machine) Update pyhboard-polis-imx8mm config.
It is based on machine phyboard-polis-imx8mm-4.
Removed OPTee feature.

--- a/meta-ams-bsp-phytecimx8/conf/machine/phyboard-polis-imx8mm.conf
+++ b/meta-ams-bsp-phytecimx8/conf/machine/phyboard-polis-imx8mm.conf
@@ -5,11 +5,17 @@
 
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
 
+# part of meta-freescale
 require conf/machine/include/imx-base.inc
+# Part of meta-phytecphytec layer
 include conf/machine/include/phyimx8.inc
+# Part of poky/meta
 require conf/machine/include/tune-cortexa53.inc
 
 MACHINE_FEATURES += "emmc pci wifi bluetooth can tpm2 alsa"
+# OP TEE is the NXP Trusted Execution Environment"
+# Remove here since it runs into an issue
+MACHINE_FEATURES_remove = "optee"
 
 KERNEL_DEVICETREE = " \
     freescale/imx8mm-phyboard-polis-rdk.dtb \
@@ -58,4 +64,6 @@ KERNEL_IMAGETYPE = "Image"
 
 LOADADDR = ""
 UBOOT_MAKE_TARGET = ""
+
+# PREFERRED_VERSION_firmware-imx-8m = "8.12"
 
