--- a/meta-ams/conf/templates/default/bblayers.conf.sample
+++ b/meta-ams/conf/templates/default/bblayers.conf.sample
@@ -1,5 +1,6 @@
-# LAYER_CONF_VERSION is inclreated each time in /build/conf/bbllayers.conf
-LAYER_CONF_VERSION = "7"
+# LCONF_VERSION is increased each time build/conf/bblayers.conf
+# changes incompatibly
+LCONF_VERSION = "3"
 
 BBPATH = "${TOPDIR}"
 BSPDIR := "${@os.path.abspath(os.path.dirname(d.getVar('FILE', True)) + '/../..')}"
